Implemented roll a dice
