# backend/api/oas_operations_gen.go
@@ -8,12 +8,16 @@ type OperationName = string
 const (
 	AcceptTransactionOperation             OperationName = "AcceptTransaction"
 	CancelTransactionOperation             OperationName = "CancelTransaction"
+	CashoutCasinoBalanceOperation          OperationName = "CashoutCasinoBalance"
 	ClaimDailyBalanceOperation             OperationName = "ClaimDailyBalance"
+	CreateBetRollADiceOperation            OperationName = "CreateBetRollADice"
 	CreateDiscordUserOperation             OperationName = "CreateDiscordUser"
 	CreateLinkAccountCodeOperation         OperationName = "CreateLinkAccountCode"
 	CreateTransactionOperation             OperationName = "CreateTransaction"
 	CreateUserOperation                    OperationName = "CreateUser"
+	DepositCasinoBalanceOperation          OperationName = "DepositCasinoBalance"
 	GetAccountLinkByIdOperation            OperationName = "GetAccountLinkById"
+	GetCasinoBalanceOperation              OperationName = "GetCasinoBalance"
 	GetDailyClaimStatusOperation           OperationName = "GetDailyClaimStatus"
 	GetDiscordUserAutofillByIdOperation    OperationName = "GetDiscordUserAutofillById"
 	GetDiscordUserLanguageByIdOperation    OperationName = "GetDiscordUserLanguageById"
@@ -25,6 +29,7 @@ const (
 	LoginUserOperation                     OperationName = "LoginUser"
 	RefundTransactionOperation             OperationName = "RefundTransaction"
 	RejectTransactionOperation             OperationName = "RejectTransaction"
+	UpdateCasinoBalanceOperation           OperationName = "UpdateCasinoBalance"
 	UpdateDiscordUserAutofillByIdOperation OperationName = "UpdateDiscordUserAutofillById"
 	UpdateDiscordUserLanguageByIdOperation OperationName = "UpdateDiscordUserLanguageById"
 	UpdateUserBalanceByIdOperation         OperationName = "UpdateUserBalanceById"
